# lflog

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  package-lock.json
examples/: complex_analysis_demo.sh  duckdb_comparison.sh  glob_and_metadata_demo.sh
examples/benchmark/: README.md  benchmark.sh  benchmark_threads.sh  benchmark_xxl.sh  generate_data.sh  generate_xxl.sh
examples/loghub_demos/: README.md
examples/loghub_demos/config/: loghub.toml
examples/loghub_demos/queries/: hdfs.sql  hpc.sql  linux.sql  proxifier.sql  thunderbird.sql  zookeeper.sql
examples/loghub_demos/scripts/: run_demo.sh
src/: app.rs  error.rs  lib.rs  profile.rs  scanner.rs  table_provider.rs  types.rs
src/datafusion/: builder.rs  exec.rs  mod.rs  provider.rs
src/macros/: expander.rs  mod.rs  parser.rs
