[package]
name = "lflog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
datafusion = "51.0.0"
datafusion-common = "51.0.0"
datafusion-expr = "51.0.0"
datafusion-physical-expr-adapter = "51.0.0"
datafusion-proto = "51.0.0"
datafusion-sql = "51.0.0"
dirs = "6"
env_logger = "0.11.8"
log = "0.4.29"
memmap2 = "0.9.9"
rayon = "1.11.0"
regex = "1.12.2"
rustyline = "15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"

[[bin]]
name = "lflog"
path = "src/bin/lflog.rs"

[[bin]]
name = "lf_run"
path = "src/bin/lf_run.rs"

[dev-dependencies]
tempfile = "3"
