[package]
name = "lflog"
version = "0.1.4"
edition = "2024"
description = "Query log files with SQL using DataFusion and regex pattern macros."
license = "MIT"
repository = "https://github.com/WeiNyn/lflog"

[dependencies]
anyhow = "1.0.100"
arrow-arith = "57.2.0"
arrow-flight = { version = "57.2.0", features = ["cli", "flight-sql", "tls-ring"] }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
datafusion = "51.0.0"
datafusion-common = "51.0.0"
datafusion-expr = "51.0.0"
datafusion-physical-expr-adapter = "51.0.0"
datafusion-proto = "51.0.0"
datafusion-sql = "51.0.0"
dirs = "6"
env_logger = "0.11.8"
futures = "0.3.31"
glob = "0.3.3"
log = "0.4.29"
memmap2 = "0.9.9"
rayon = "1.11.0"
regex = "1.12.2"
thiserror = "2"
rustyline = "15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tonic = { version = "0.14.3", features = ["_tls-any", "tls-native-roots"] }
tracing = "0.1.44"

[[bin]]
name = "lflog"
path = "src/bin/lflog.rs"

[dev-dependencies]
tempfile = "3"
